# Kindle_to_PDF

./: .gitignore  README.md  capture.py  config.toml  image_to_pdf.py  main.py  pyproject.toml
